tests/fsharp/typecheck/sigs/neg_byref_21.bsl

neg_byref_21.fs(5,14,5,17): typecheck error FS0001: This expression was expected to have type
    'int'    
but here has type
    'float'    
